--- a/src/main/resources/view/register_page.fxml
+++ b/src/main/resources/view/register_page.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.RegisterPagecontroller">
+<AnchorPane fx:id="registerroot" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.RegisterPagecontroller">
     <children>
         <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutX="-4.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
@@ -40,5 +40,10 @@
             <Font size="18.0" />
          </font>
       </TextField>
+      <JFXButton fx:id="registerBackBtn" layoutX="1627.0" layoutY="164.0" onAction="#registerBackBtnOnAction" prefHeight="39.0" prefWidth="75.0" text="Back">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </JFXButton>
     </children>
 </AnchorPane>
