--- a/src/main/resources/view/ourstoke_page.fxml
+++ b/src/main/resources/view/ourstoke_page.fxml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.OurstokePageController">
+<AnchorPane fx:id="ourstokeRoot" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.OurstokePageController">
 
     <children>
         <ImageView fitHeight="1076.0" fitWidth="1907.0" layoutX="4.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
