--- a/src/main/resources/view/register_page.fxml
+++ b/src/main/resources/view/register_page.fxml
@@ -9,18 +9,18 @@
 
 <AnchorPane fx:id="registerroot" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.RegisterPagecontroller">
     <children>
-        <ImageView fitHeight="1080.0" fitWidth="1920.0" layoutX="-4.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="1080.0" fitWidth="1930.0" layoutX="-4.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../img/Frame%2011.png" />
             </image>
         </ImageView>
         <TextField fx:id="passwordTxt" layoutX="1298.0" layoutY="582.0" prefHeight="44.0" prefWidth="356.0" promptText="Password" style="-fx-background-color: trans;">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font></TextField>
         <TextField fx:id="confirmPasswordTxt" layoutX="1294.0" layoutY="678.0" prefHeight="39.0" prefWidth="356.0" promptText="Confirm Password" style="-fx-background-color: trans;">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font></TextField>
         <JFXButton fx:id="createAccountBtn" layoutX="1291.0" layoutY="770.0" onAction="#createAccountBtnOnAction" prefHeight="66.0" prefWidth="396.0" styleClass="button-with-style" stylesheets="@../style/createNewAcoutButton.css" text="Create new accouunt">
             <font>
@@ -29,15 +29,15 @@
         </JFXButton>
         <TextField fx:id="usernameTxt" layoutX="1296.0" layoutY="304.0" prefHeight="44.0" prefWidth="356.0" promptText="User Name" style="-fx-background-color: tra;">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font></TextField>
         <TextField fx:id="contacTxt" layoutX="1292.0" layoutY="488.0" prefHeight="44.0" prefWidth="356.0" promptText="Contac" style="-fx-background-color: tra;">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font></TextField>
       <TextField fx:id="useridTxt" layoutX="1295.0" layoutY="398.0" prefHeight="44.0" prefWidth="356.0" promptText="User Id" style="-fx-background-color: tra;">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
       </TextField>
       <JFXButton fx:id="registerBackBtn" layoutX="1627.0" layoutY="164.0" onAction="#registerBackBtnOnAction" prefHeight="39.0" prefWidth="75.0" text="Back">
