--- a/src/main/resources/view/leves_stoke_page.fxml
+++ b/src/main/resources/view/leves_stoke_page.fxml
@@ -81,24 +81,24 @@
             <Font name="System Bold" size="48.0" />
          </font>
       </Label>
-      <TextField layoutX="529.0" layoutY="220.0" prefHeight="52.0" prefWidth="572.0" promptText="Employee Id" style="-fx-background-color: tra;">
+      <TextField fx:id="employeeid" layoutX="529.0" layoutY="220.0" prefHeight="52.0" prefWidth="572.0" promptText="Employee Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField layoutX="529.0" layoutY="324.0" prefHeight="44.0" prefWidth="572.0" promptText="Employee Name" style="-fx-background-color: tra;">
+      <TextField fx:id="empnameid" layoutX="529.0" layoutY="324.0" prefHeight="44.0" prefWidth="572.0" promptText="Employee Name" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField layoutX="529.0" layoutY="519.0" prefHeight="52.0" prefWidth="572.0" promptText="User Id" style="-fx-background-color: tra;">
+      <TextField fx:id="uid" layoutX="529.0" layoutY="519.0" prefHeight="52.0" prefWidth="572.0" promptText="User Id" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField layoutX="529.0" layoutY="614.0" prefHeight="52.0" prefWidth="572.0" promptText="Employee Contac" style="-fx-background-color: tra;">
+      <TextField fx:id="empContacid" layoutX="529.0" layoutY="614.0" prefHeight="52.0" prefWidth="572.0" promptText="Employee Contac" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
-      <TextField layoutX="529.0" layoutY="718.0" prefHeight="44.0" prefWidth="572.0" promptText="Employee Address" style="-fx-background-color: tra;">
+      <TextField fx:id="empaddressid" layoutX="529.0" layoutY="718.0" prefHeight="44.0" prefWidth="572.0" promptText="Employee Address" style="-fx-background-color: tra;">
          <font>
             <Font size="18.0" />
          </font></TextField>
@@ -107,12 +107,12 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <JFXButton layoutX="521.0" layoutY="812.0" prefHeight="64.0" prefWidth="272.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Save Emolyee">
+      <JFXButton fx:id="saveEmpId" layoutX="521.0" layoutY="812.0" prefHeight="64.0" prefWidth="272.0" styleClass="button-with-style" stylesheets="@../style/Savebtn.css" text="Save Emolyee">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
       </JFXButton>
-      <JFXButton layoutX="831.0" layoutY="810.0" prefHeight="64.0" prefWidth="272.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Add new Employee">
+      <JFXButton fx:id="addnewempid" layoutX="831.0" layoutY="810.0" prefHeight="64.0" prefWidth="272.0" styleClass="button-with-style" stylesheets="@../style/clearbtn.css" text="Add new Employee">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
