--- a/src/main/resources/view/dashboard.fxml
+++ b/src/main/resources/view/dashboard.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="dashbordRoot" prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.DashboardController">
 
     <children>
@@ -22,7 +21,7 @@
                 <Image url="@../img/menu.png" />
             </image>
         </ImageView>
-        <JFXButton fx:id="dashboardbtn" layoutX="29.0" layoutY="166.0" onAction="#dashbordbtnOnAction" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Dashboard">
+        <JFXButton layoutX="29.0" layoutY="166.0" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Dashboard">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font></JFXButton>
@@ -56,17 +55,17 @@
                 <Font name="System Bold" size="18.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="28.0" layoutY="607.0" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Payment">
+        <JFXButton layoutX="28.0" layoutY="607.0" onAction="#ordersOnAction" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Orders">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="28.0" layoutY="512.0" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Supplier">
+        <JFXButton layoutX="28.0" layoutY="512.0" onAction="#SupplierOnAction" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Supplier">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
         </JFXButton>
-        <JFXButton layoutX="27.0" layoutY="703.0" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Repote">
+        <JFXButton layoutX="27.0" layoutY="703.0" onAction="#paymentOnAction" prefHeight="64.0" prefWidth="291.0" styleClass="button-with-style" stylesheets="@../style/dashboardAllbutton.css" text="Payment">
             <font>
                 <Font name="System Bold" size="18.0" />
             </font>
@@ -112,60 +111,6 @@
             </image>
         </ImageView>
         <TextField layoutX="879.0" layoutY="14.0" prefHeight="48.0" prefWidth="478.0" style="-fx-background-color: #DCDCDC;" />
-        <ImageView fitHeight="699.0" fitWidth="736.0" layoutX="363.0" layoutY="304.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Rectangle%201412.png" />
-            </image>
-        </ImageView>
-        <JFXButton layoutX="421.0" layoutY="455.0" prefHeight="135.0" prefWidth="602.0" styleClass="button-with-style" stylesheets="@../style/toatalEmployeeDashboardButton.css" text="Total Employees">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font>
-        </JFXButton>
-        <JFXButton layoutX="423.0" layoutY="619.0" prefHeight="135.0" prefWidth="604.0" styleClass="button-with-style" stylesheets="@../style/totalOrdersDsahboard.css" text="Total Orders">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font></JFXButton>
-        <JFXButton layoutX="427.0" layoutY="798.0" prefHeight="135.0" prefWidth="604.0" styleClass="button-with-style" stylesheets="@../style/totaltokebutton.css" text="Total Stoke">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font></JFXButton>
-        <Label layoutX="960.0" layoutY="334.0" prefHeight="32.0" prefWidth="92.0" text="Today’s ">
-            <font>
-                <Font name="System Bold" size="18.0" />
-            </font>
-        </Label>
-        <Label layoutX="960.0" layoutY="366.0" text="Summery" />
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="901.0" layoutY="475.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/11111111111.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="903.0" layoutY="649.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Rectangle%201426.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="901.0" layoutY="827.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Rectangle%201429.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="394.0" layoutY="426.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Ellipse%204.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="396.0" layoutY="601.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Ellipse%205.png" />
-            </image>
-        </ImageView>
-        <ImageView fitHeight="88.0" fitWidth="90.0" layoutX="397.0" layoutY="783.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-                <Image url="@../img/Ellipse%206.png" />
-            </image>
-        </ImageView>
         <Label layoutX="391.0" layoutY="88.0" prefHeight="140.0" prefWidth="286.0" text="Hello, User">
             <font>
                 <Font name="System Bold" size="48.0" />
