--- a/src/main/resources/view/orders.fxml
+++ b/src/main/resources/view/orders.fxml
@@ -2,14 +2,12 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXClippedPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.ViewEmployeePageController">
+<AnchorPane prefHeight="1080.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.teaFactory.controller.OrdersController">
 
     <children>
         <ImageView fitHeight="1080.0" fitWidth="342.0" layoutX="2.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
@@ -68,18 +66,17 @@
             </font>
         </JFXButton>
         <JFXClippedPane />
-      <TableView fx:id="tblEmployee" layoutX="386.0" layoutY="164.0" prefHeight="846.0" prefWidth="1446.0">
-        <columns>
-          <TableColumn fx:id="colname" maxWidth="-Infinity" prefWidth="200.0" text="employee id" />
-          <TableColumn fx:id="coladdress" prefWidth="200.0" text="employee name" />
-            <TableColumn fx:id="colcantac" prefWidth="200.0" text="C2" />
-            <TableColumn fx:id="colUid" prefWidth="200.0" text="C2" />
-            <TableColumn fx:id="colEid" prefWidth="200.0" text="C2" />
-            <TableColumn fx:id="colbd" prefWidth="200.0" text="C2" />
-            <TableColumn fx:id="colgender" maxWidth="1000.0" prefWidth="200.0" text="C2" />
-            <TableColumn fx:id="colname" maxWidth="1000.0" prefWidth="200.0" text="C2" />
-        </columns>
-      </TableView>
-      <JFXButton fx:id="backBtnOnAction" layoutX="1778.0" layoutY="66.0" onAction="#backBtnOnAction" prefHeight="48.0" prefWidth="92.0" text="Back" />
+      <ImageView fitHeight="1038.0" fitWidth="1576.0" layoutX="344.0" layoutY="42.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Rectangle%201529.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="570.0" fitWidth="853.0" layoutX="748.0" layoutY="270.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../img/Frame%2025.png" />
+         </image>
+      </ImageView>
+      <JFXButton layoutX="983.0" layoutY="448.0" prefHeight="64.0" prefWidth="416.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
+      <JFXButton layoutX="981.0" layoutY="560.0" prefHeight="64.0" prefWidth="416.0" styleClass="button-with-style" stylesheets="@../style/viewStokeButton.css" />
     </children>
 </AnchorPane>
